Fixes for image frontmentor

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
   <body>
     <div class="" id="app">
       <div class="advice">
-        <div v-if="loading" class="itsLoading">
+        <!-- <div v-if="loading" class="itsLoading">
           <div class="lds-ring">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
           </div>
-        </div>
-        <div v-else class="advice__inner">
+        </div> -->
+        <div class="advice__inner">
           <!-- <span class="advice__id">ADVICE ID # {{advice.id}}</span>
           <span class="advice__text">“{{advice.advice}}”</span> -->
           <span class="advice__id">ADVICE #117</span>
