--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
   <body>
     <div class="" id="app">
       <div class="advice">
-        <!-- <div v-if="loading" class="itsLoading">
+        <div v-if="loading" class="itsLoading">
           <div class="lds-ring">
             <div></div>
             <div></div>
             <div></div>
             <div></div>
           </div>
-        </div> -->
-        <div class="advice__inner">
-          <!-- <span class="advice__id">ADVICE ID # {{advice.id}}</span>
-          <span class="advice__text">“{{advice.advice}}”</span> -->
-          <span class="advice__id">ADVICE #117</span>
+        </div>
+        <div v-else class="advice__inner">
+          <span class="advice__id">ADVICE ID # {{advice.id}}</span>
+          <span class="advice__text">“{{advice.advice}}”</span>
+          <!-- <span class="advice__id">ADVICE #117</span>
           <span class="advice__text"
             >“It is easy to sit up and take notice, what's difficult is getting
             up and taking action.”</span
-          >
+          > -->
         </div>
         <img
           class="advice__separator"
