Html issues fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div v-else class="advice__inner">
-          <span class="advice__id">ADVICE ID # {{advice.id}}</span>
+          <h1 class="advice__id">ADVICE ID # {{advice.id}}</h1>
           <span class="advice__text">“{{advice.advice}}”</span>
         </div>
         <img
@@ -56,17 +56,17 @@
           </svg>
         </button>
       </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a target="_blank" href="https://www.instagram.com/luisherrerael"
+          >Luis Herrera⚡</a
+        >.
+      </div>
     </main>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a target="_blank" href="https://www.instagram.com/luisherrerael"
-        >Luis Herrera⚡</a
-      >.
-    </div>
     <script src="https://unpkg.com/vue@3"></script>
     <script src="./js.js"></script>
   </body>
